hydro_test_local/src/local/snapshots/hydro_test_local__local__negation__tests__difference_static_tick@graphvis_mermaid.snap
---
source: hydro_test_local/src/local/negation.rs
expression: "flow.meta_graph().unwrap().to_mermaid(& Default :: default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"<div style=text-align:center>(1v1)</div> <code>source_iter({<br>    use crate::__staged::local::negation::*;<br>    0..5<br>})</code>"/]:::pullClass
2v1[\"(2v1) <code>persist::&lt;'static&gt;()</code>"/]:::pullClass
3v1[\"<div style=text-align:center>(3v1)</div> <code>source_iter({<br>    use crate::__staged::local::negation::*;<br>    3..6<br>})</code>"/]:::pullClass
4v1[\"(4v1) <code>difference_multiset::&lt;'tick, 'tick&gt;()</code>"/]:::pullClass
5v1[/"<div style=text-align:center>(5v1)</div> <code>for_each(<br>    stageleft::runtime_support::fn1_type_hint::&lt;<br>        u32,<br>        (),<br>    &gt;({<br>        use crate::__staged::local::negation::*;<br>        let output__free = output;<br>        |v| {<br>            output__free.send(v).unwrap();<br>        }<br>    }),<br>)</code>"\]:::pushClass
6v1["(6v1) <code>handoff</code>"]:::otherClass
1v1-->2v1
2v1-->|pos|4v1
3v1-->6v1
4v1-->5v1
6v1--x|neg|4v1; linkStyle 4 stroke:red
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    3v1
    subgraph sg_1v1_var_stream_2 ["var <tt>stream_2</tt>"]
        3v1
    end
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    1v1
    2v1
    4v1
    5v1
    subgraph sg_2v1_var_stream_0 ["var <tt>stream_0</tt>"]
        1v1
    end
    subgraph sg_2v1_var_stream_1 ["var <tt>stream_1</tt>"]
        2v1
    end
    subgraph sg_2v1_var_stream_3 ["var <tt>stream_3</tt>"]
        4v1
    end
end
